opam-version: "2.0"
maintainer: "johnw@newartisans.com"
version: "dev"

homepage: "https://github.com/jwiegley/jlib"
dev-repo: "git+https://github.com/jwiegley/jlib.git"
bug-reports: "https://github.com/jwiegley/jlib/issues"
license: "BSD-3-Clause"

synopsis: "A library of theorems I find generally useful"
description: """
A library of theorems I find generally useful.
"""

build: [make "JOBS=%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.10" & < "8.16~") | (= "dev")}
  "coq-equations" {(>= "1.2" & < "1.4~") | (= "dev")}
]

tags: [
]
authors: [
  "John Wiegley"
]
